# SINGER

./: CMakeLists.txt  make_release.sh
SINGER/SINGER/: CMakeLists.txt  Sampler.hpp  main.cpp  parallel_singer  singer_master
